// Copyright 2019 The LUCI Authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package luci.resultsink.v1;

import "google/protobuf/empty.proto";
import "google/protobuf/field_mask.proto";
import "google/protobuf/struct.proto";
import "go.chromium.org/luci/resultdb/sink/proto/v1/test_result.proto";

option go_package = "go.chromium.org/luci/resultdb/sink/proto/v1;sinkpb";

// Service to report test results.
//
// Note that clients need to add the auth token in the HTTP header when invoking
// the RPCs of this service, or Unauthenticated error will be returned.
// i.e., Authorization: ResultSink <auth-token>
//
// The auth token is available via resultdb.resultsink.auth_token LUCI_CONTEXT
// value. For more information, visit
// https://github.com/luci/luci-py/blob/master/client/LUCI_CONTEXT.md
//
// Use of LUCI is subject to the Google [Terms of Service](https://policies.google.com/terms)
// and [Privacy Policy](https://policies.google.com/privacy).
service Sink {
  // Reports test results.
  rpc ReportTestResults(ReportTestResultsRequest)
      returns (ReportTestResultsResponse) {};

  // Reports invocation-level artifacts.
  // To upload result-level artifact, use ReportTestResults instead.
  rpc ReportInvocationLevelArtifacts(ReportInvocationLevelArtifactsRequest)
      returns (google.protobuf.Empty) {};

  // Update an invocation
  rpc UpdateInvocation(UpdateInvocationRequest)
      returns (Invocation) {};
}

message ReportTestResultsRequest {
  // Test results to report.
  repeated TestResult test_results = 1;
}

message ReportTestResultsResponse {
  // List of unique identifiers that can be used to link to these results
  // or requested via luci.resultdb.v1.ResultDB service.
  repeated string test_result_names = 1;
}

message ReportInvocationLevelArtifactsRequest {
  // Invocation-level artifacts to report.
  // The map key is an artifact id.
  map<string, Artifact> artifacts = 1;
}

message UpdateInvocationRequest {
  // Invocation to update.
  Invocation invocation = 1;

  // The list of fields to be updated. See https://google.aip.dev/161.
  //
  // The following paths can be used for extended_properties:
  // * "extended_properties" to target the whole extended_properties,
  // * "extended_properties.some_key" to target one key of extended_properties.
  // See sink/sink_server.go for implementation.
  google.protobuf.FieldMask update_mask = 2;
}

// A local equivalent of the luci.resultdb.v1.Invocation message.
// The 'name' field is omitted as result sink keeps track of which invocation
// is being uploaded to.
message Invocation {
  // See 'extended_properties' field of the luci.resultdb.v1.Invocation message
  // for details.
  map<string, google.protobuf.Struct> extended_properties = 1;
}
